--- a/src/components/pages/checkout/_cart_and_checkout.scss
+++ b/src/components/pages/checkout/_cart_and_checkout.scss
@@ -28,4 +28,11 @@
         display: flex;
         justify-content: space-between;
     }
+    .backtocart {
+        cursor: pointer;
+        &:hover {
+            color: $text_color_hover;
+            text-decoration: underline;
+        }
+    }
 }
