--- a/src/assets/css/_keyframes.scss
+++ b/src/assets/css/_keyframes.scss
@@ -15,6 +15,16 @@
         transform: translate(0);
     }
 }
+@keyframes alertShow {
+    0% {
+        opacity: 0;
+        transform: (-200px);
+    }
+    100% {
+        opacity: 1;
+        transform: (0px);
+    }
+}
 
 @keyframes fadeOut {
     0% {
