--- a/src/components-share/Cart/cart_item_review/_cart_item_review.scss
+++ b/src/components-share/Cart/cart_item_review/_cart_item_review.scss
@@ -10,6 +10,8 @@
     }
     &-img {
         width: 100%;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
     &-title {
         line-height: normal;
