--- a/src/components/layout/header/_header.scss
+++ b/src/components/layout/header/_header.scss
@@ -105,11 +105,30 @@
                 position: relative;
                 margin: 0px 10px;
             }
-            &-avata img {
-                width: inherit;
-                height: inherit;
+            &-avata {
+                justify-content: center;
+                align-items: center;
+                overflow: hidden;
                 border-radius: 50%;
-                box-shadow: 0px 0px 10px 0px #d1d1d1;
+                .user_no_img {
+                    width: inherit;
+                    height: inherit;
+                    display: flex;
+                    background-color: $text_color_hover;
+                    border-radius: 50%;
+                    justify-content: center;
+                    align-items: center;
+                    text-transform: uppercase;
+                    color: white;
+                    font-size: 20px;
+                }
+                img {
+                    width: inherit;
+                    height: inherit;
+                    border-radius: 50%;
+                    box-shadow: 0px 0px 10px 0px #d1d1d1;
+                    object-fit: cover;
+                }
             }
             &-option {
                 position: absolute;
