--- a/src/assets/css/_base_styles.scss
+++ b/src/assets/css/_base_styles.scss
@@ -3,8 +3,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-margin-top: 100px;
-    scroll-behavior: smooth;
     font-family: "Mulish", sans-serif;
 }
 
@@ -65,8 +63,24 @@ p {
         background-color: #cd3808;
     }
 }
+.btn-disable {
+    background-color: #ebebeb;
+    cursor: no-drop;
+    color: #b4b4b4;
+    &:hover {
+        background-color: #ebebeb;
+        color: #b4b4b4;
+    }
+}
 .no_pading_col > div {
     padding: 0px;
+}
+
+.overflow_ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: inherit;
 }
 
 img {
