update lich sử giao dịch

--- a/src/components-share/Cart/cart_item/_cart_item.scss
+++ b/src/components-share/Cart/cart_item/_cart_item.scss
@@ -10,6 +10,7 @@
         align-items: center;
     }
     &-title {
+        justify-content: left !important;
         span {
             cursor: pointer;
             color: $text_color_hover;
