--- a/src/assets/css/globals.scss
+++ b/src/assets/css/globals.scss
@@ -7,6 +7,7 @@
 @import "../../components/layout/footer/footer";
 @import "../../components/layout/sidebar/sidebar";
 
+@import "../../components-share/Card/CardHistoryOrder/card_history_order";
 @import "../../components-share/Card/CardNews/card_news";
 @import "../../components-share/Card/CardProduct/card_product";
 @import "../../components-share/Card/CardReview/card_review";
