--- a/src/components/layout/contact/_contact.scss
+++ b/src/components/layout/contact/_contact.scss
@@ -5,7 +5,7 @@
     height: 140px;
     display: block;
     z-index: 100000;
-    span {
+    .social_contact_icon {
         cursor: pointer;
         position: absolute;
         top: 50px;
@@ -13,8 +13,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        height: 40px;
-        width: 40px;
+        height: 45px;
+        width: 45px;
         border-radius: 50%;
         border: 2px solid;
         background: rgba(#fff, 0.8);
@@ -24,8 +24,8 @@
             height: 22px;
         }
         svg {
-            width: 30px;
-            height: 30px;
+            width: 25px;
+            height: 25px;
         }
         &:first-child {
             opacity: 0;
@@ -45,23 +45,23 @@
     }
     &:hover {
         width: 100px;
-        & > span:first-child {
+        & > .social_contact_icon:first-child {
             opacity: 1;
-            top: 0px;
+            top: -5px;
         }
-        & > span:nth-child(2) {
-            top: 26px;
+        & > .social_contact_icon:nth-child(2) {
+            top: 23px;
             opacity: 1;
-            left: 46px;
+            left: 49px;
         }
-        & > span:nth-child(3) {
-            top: 76px;
+        & > .social_contact_icon:nth-child(3) {
+            top: 79px;
             opacity: 1;
-            left: 46px;
+            left: 49px;
         }
-        & > span:nth-child(4) {
+        & > .social_contact_icon:nth-child(4) {
             opacity: 1;
-            top: 100px;
+            top: 105px;
         }
     }
 }
