--- a/src/components/layout/footer/_footer.scss
+++ b/src/components/layout/footer/_footer.scss
@@ -137,7 +137,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        span {
+        .social_contact_icon {
             cursor: pointer;
             display: flex;
             justify-content: center;
