update huỷ đơn hàng

--- a/src/assets/css/pages/_taikhoan.scss
+++ b/src/assets/css/pages/_taikhoan.scss
@@ -101,8 +101,8 @@
         overflow: auto;
     }
     .table_data {
-        width: 100%;
-        padding: 0px 10px;
+        width: 876px;
+        padding: 0px;
         div.row {
             width: 100%;
         }
