--- a/src/assets/css/pages/_taikhoan.scss
+++ b/src/assets/css/pages/_taikhoan.scss
@@ -6,6 +6,7 @@
             position: relative;
             height: 110px;
             width: 110px;
+            border: 2px solid #57a545;
             margin: 15px auto;
             border-radius: 50%;
             overflow: hidden;
